tests/anytype_pack_index_not_const_bad.stderr
tests/anytype_pack_index_not_const_bad.sl:4:11: error: SL2080: anytype pack index must be a const-evaluable integer
